dev: fixes to header pattern - links go to block on mobile and sizes and padding fixes

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -26,6 +26,7 @@ $box-shadow:	    0 2px 10px rgba($text-colour, 0.5);
 // Patterns
 @import "patterns/confirm-pages";
 @import "patterns/case";
+@import "patterns/header";
 @import "patterns/flashcard";
 @import "patterns/highlights";
 @import "patterns/modal";
@@ -69,6 +70,63 @@ a {
   margin-bottom: 0.55556em;
 }
 
+// Service Header overrides
+
+@media screen and (max-width: 640px) {
+  #global-header .header-wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (min-width: 769px) {
+  #global-header.with-proposition .header-wrapper .header-global {
+    display: inline-block;
+    width: 66.6%!important;
+  }
+
+  #global-header.with-proposition .header-wrapper .header-proposition  {
+    width: 33.3%;
+    text-align: right;
+
+    .hod-search {
+      font-size: 19px;
+    }
+  }
+}
+
+@media (min-width: 641px) and (max-width: 768px) {
+  #global-header.with-proposition .header-wrapper .header-global {
+    display: inline-block;
+    width: 60%!important;
+  }
+
+  #global-header.with-proposition .header-wrapper .header-proposition  {
+    width: 40%;
+    text-align: right;
+
+    .hod-search {
+      font-size: 19px;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  #global-header.with-proposition .header-wrapper .header-global {
+    float: left;
+    width: 100%;
+  }
+
+  #global-header.with-proposition .header-wrapper .header-proposition  {
+    float: left;
+    display: inline-block;
+    width: 100%;
+
+    .hod-search {
+      font-size: 17px;
+    }
+  }
+}
 
 
 
